--- a/build-week-scrap.ipynb
+++ b/build-week-scrap.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[WinError 2] The system cannot find the file specified: 'DS-Unit-2-Build-Week'\nc:\\Users\\jblac\\OneDrive\\Documents\\Lambda-JOSH-PC\\DS-Unit-2-Build-Week\n"
+     "text": "[WinError 2] The system cannot find the file specified: 'DS-Unit-2-Build-Week'\nc:\\Users\\jblac\\OneDrive\\Documents\\Lambda-JOSH-PC\\DS-Unit-2-Build\n"
     }
    ],
    "source": [
@@ -17,13 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Volume in drive C is SSD\n Volume Serial Number is E288-DA6D\n\n Directory of c:\\Users\\jblac\\OneDrive\\Documents\\Lambda-JOSH-PC\\DS-Unit-2-Build-Week\n\n04/22/2020  12:26 PM    <DIR>          .\n04/22/2020  12:26 PM    <DIR>          ..\n04/22/2020  04:49 PM            40,835 build-week-scrap.ipynb\n04/22/2020  12:26 PM                 0 scratch.ipynb\n04/21/2020  01:30 PM    <DIR>          wine-deep-learning\n04/21/2020  02:14 PM        49,784,334 winemag-data_first150k.csv\n04/20/2020  02:57 PM        52,908,706 winemag-data-130k-v2.csv\n04/20/2020  02:57 PM        79,279,294 winemag-data-130k-v2.json\n               5 File(s)    182,013,169 bytes\n               3 Dir(s)  159,106,306,048 bytes free\n"
+     "text": "Volume in drive C is SSD\n Volume Serial Number is E288-DA6D\n\n Directory of c:\\Users\\jblac\\OneDrive\\Documents\\Lambda-JOSH-PC\\DS-Unit-2-Build\n\n04/23/2020  01:52 PM    <DIR>          .\n04/23/2020  01:52 PM    <DIR>          ..\n04/23/2020  01:52 PM    <DIR>          .vscode\n04/24/2020  12:28 AM            40,738 build-week-scrap.ipynb\n04/23/2020  09:08 AM                64 README.md\n04/22/2020  12:26 PM                 0 scratch.ipynb\n04/23/2020  09:09 AM    <DIR>          wine-deep-learning\n04/21/2020  02:14 PM        49,784,334 winemag-data_first150k.csv\n04/20/2020  02:57 PM        52,908,706 winemag-data-130k-v2.csv\n04/20/2020  02:57 PM        79,279,294 winemag-data-130k-v2.json\n               6 File(s)    182,013,136 bytes\n               4 Dir(s)  142,343,180,288 bytes free\n"
     }
    ],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -45,15 +45,18 @@
     "from glob import glob\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_selection import f_regression, SelectKBest\n",
     "\n",
     "from sklearn.pipeline import make_pipeline\n",
     "import category_encoders as ce\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.linear_model import Ridge\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
-    "\n",
-    "\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import validation_curve\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "\n",
@@ -66,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +89,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>country</th>\n      <th>description</th>\n      <th>designation</th>\n      <th>points</th>\n      <th>price</th>\n      <th>province</th>\n      <th>region_1</th>\n      <th>region_2</th>\n      <th>taster_name</th>\n      <th>taster_twitter_handle</th>\n      <th>title</th>\n      <th>variety</th>\n      <th>winery</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>Italy</td>\n      <td>Aromas include tropical fruit, broom, brimston...</td>\n      <td>Vulkà Bianco</td>\n      <td>87</td>\n      <td>NaN</td>\n      <td>Sicily &amp; Sardinia</td>\n      <td>Etna</td>\n      <td>NaN</td>\n      <td>Kerin O’Keefe</td>\n      <td>@kerinokeefe</td>\n      <td>Nicosia 2013 Vulkà Bianco  (Etna)</td>\n      <td>White Blend</td>\n      <td>Nicosia</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>Portugal</td>\n      <td>This is ripe and fruity, a wine that is smooth...</td>\n      <td>Avidagos</td>\n      <td>87</td>\n      <td>15.0</td>\n      <td>Douro</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Roger Voss</td>\n      <td>@vossroger</td>\n      <td>Quinta dos Avidagos 2011 Avidagos Red (Douro)</td>\n      <td>Portuguese Red</td>\n      <td>Quinta dos Avidagos</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>US</td>\n      <td>Tart and snappy, the flavors of lime flesh and...</td>\n      <td>NaN</td>\n      <td>87</td>\n      <td>14.0</td>\n      <td>Oregon</td>\n      <td>Willamette Valley</td>\n      <td>Willamette Valley</td>\n      <td>Paul Gregutt</td>\n      <td>@paulgwine</td>\n      <td>Rainstorm 2013 Pinot Gris (Willamette Valley)</td>\n      <td>Pinot Gris</td>\n      <td>Rainstorm</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>US</td>\n      <td>Pineapple rind, lemon pith and orange blossom ...</td>\n      <td>Reserve Late Harvest</td>\n      <td>87</td>\n      <td>13.0</td>\n      <td>Michigan</td>\n      <td>Lake Michigan Shore</td>\n      <td>NaN</td>\n      <td>Alexander Peartree</td>\n      <td>NaN</td>\n      <td>St. Julian 2013 Reserve Late Harvest Riesling ...</td>\n      <td>Riesling</td>\n      <td>St. Julian</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>US</td>\n      <td>Much like the regular bottling from 2012, this...</td>\n      <td>Vintner's Reserve Wild Child Block</td>\n      <td>87</td>\n      <td>65.0</td>\n      <td>Oregon</td>\n      <td>Willamette Valley</td>\n      <td>Willamette Valley</td>\n      <td>Paul Gregutt</td>\n      <td>@paulgwine</td>\n      <td>Sweet Cheeks 2012 Vintner's Reserve Wild Child...</td>\n      <td>Pinot Noir</td>\n      <td>Sweet Cheeks</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 21
     }
    ],
    "source": [
@@ -95,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +107,7 @@
       "text/plain": "Index(['Unnamed: 0', 'country', 'description', 'designation', 'points',\n       'price', 'province', 'region_1', 'region_2', 'taster_name',\n       'taster_twitter_handle', 'title', 'variety', 'winery'],\n      dtype='object')"
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 22
     }
    ],
    "source": [
@@ -113,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +135,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>country</th>\n      <th>description</th>\n      <th>designation</th>\n      <th>points</th>\n      <th>price</th>\n      <th>province</th>\n      <th>region_1</th>\n      <th>region_2</th>\n      <th>variety</th>\n      <th>winery</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>US</td>\n      <td>This tremendous 100% varietal wine hails from ...</td>\n      <td>Martha's Vineyard</td>\n      <td>96</td>\n      <td>235.0</td>\n      <td>California</td>\n      <td>Napa Valley</td>\n      <td>Napa</td>\n      <td>Cabernet Sauvignon</td>\n      <td>Heitz</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>Spain</td>\n      <td>Ripe aromas of fig, blackberry and cassis are ...</td>\n      <td>Carodorum Selección Especial Reserva</td>\n      <td>96</td>\n      <td>110.0</td>\n      <td>Northern Spain</td>\n      <td>Toro</td>\n      <td>NaN</td>\n      <td>Tinta de Toro</td>\n      <td>Bodega Carmen Rodríguez</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>US</td>\n      <td>Mac Watson honors the memory of a wine once ma...</td>\n      <td>Special Selected Late Harvest</td>\n      <td>96</td>\n      <td>90.0</td>\n      <td>California</td>\n      <td>Knights Valley</td>\n      <td>Sonoma</td>\n      <td>Sauvignon Blanc</td>\n      <td>Macauley</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>US</td>\n      <td>This spent 20 months in 30% new French oak, an...</td>\n      <td>Reserve</td>\n      <td>96</td>\n      <td>65.0</td>\n      <td>Oregon</td>\n      <td>Willamette Valley</td>\n      <td>Willamette Valley</td>\n      <td>Pinot Noir</td>\n      <td>Ponzi</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>France</td>\n      <td>This is the top wine from La Bégude, named aft...</td>\n      <td>La Brûlade</td>\n      <td>95</td>\n      <td>66.0</td>\n      <td>Provence</td>\n      <td>Bandol</td>\n      <td>NaN</td>\n      <td>Provence red blend</td>\n      <td>Domaine de la Bégude</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 24
     }
    ],
    "source": [
@@ -141,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +162,7 @@
       "text/plain": "88     17207\n87     16933\n90     15410\n86     12600\n89     12226\n91     11359\n92      9613\n85      9530\n93      6489\n84      6480\n94      3758\n83      3025\n82      1836\n95      1535\n81       692\n96       523\n80       397\n97       229\n98        77\n99        33\n100       19\nName: points, dtype: int64"
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 26
     }
    ],
    "source": [
@@ -169,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +181,7 @@
       "text/plain": "87     20747\n88     17871\n90     15973\n86     15573\n89     12921\n85     12411\n84     10708\n91     10536\n92      9241\n83      6048\n93      6017\n82      4041\n94      3462\n95      1716\n81      1502\n80       898\n96       695\n97       365\n98       131\n99        50\n100       24\nName: points, dtype: int64"
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 27
     }
    ],
    "source": [
@@ -188,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +223,7 @@
       "text/plain": "80       397\n81       692\n82      1836\n83      3025\n84      6480\n85      9530\n86     12600\n87     16933\n88     17207\n89     12226\n90     15410\n91     11359\n92      9613\n93      6489\n94      3758\n95      1535\n96       523\n97       229\n98        77\n99        33\n100       19\nName: points, dtype: int64"
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 30
     }
    ],
    "source": [
@@ -229,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +241,7 @@
       "text/plain": "14.0     3215\n32.0     1963\n64.0      186\n8.0       892\n96.0       37\n         ... \n319.0       1\n39.0      924\n767.0       1\n142.0       8\n540.0       1\nName: price, Length: 390, dtype: int64"
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 31
     }
    ],
    "source": [
@@ -247,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +259,7 @@
       "text/plain": "8996"
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 32
     }
    ],
    "source": [
@@ -265,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +289,7 @@
       "text/plain": "((83180, 13), (20796, 13), (25995, 13))"
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 34
     }
    ],
    "source": [
@@ -295,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,28 +332,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = 'price'\n",
+    "target = 'points'\n",
+    "\n",
     "X_train = train.drop(columns=target)\n",
     "y_train = train[target]\n",
+    "\n",
     "X_val = val.drop(columns=target)\n",
     "y_val = val[target]\n",
+    "\n",
     "y_train.value_counts(normalize=False)\n",
     "X_test = test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "majority_class = y_train.mode()[0]\n",
     "y_pred = [majority_class] * len(y_train)\n",
+    "\n",
     "# y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "MAE for 3 folds: [nan nan nan]\n"
+    }
+   ],
+   "source": [
+    "# ONEHOT + LINEAR/RIDGE MODEL\n",
+    "\n",
+    "pipeline = make_pipeline(\n",
+    "    ce.OneHotEncoder(use_cat_names=True),\n",
+    "    SimpleImputer(strategy='mean'),\n",
+    "    StandardScaler(),\n",
+    "    SelectKBest(f_regression, k=20),\n",
+    "    Ridge(alpha=1.0)\n",
+    ")\n",
+    "\n",
+    "# Accuracy\n",
+    "\n",
+    "k = 3\n",
+    "scores = cross_val_score(pipeline, X_train, y_train, cv=k, scoring='neg_mean_absolute_error')\n",
+    "print(f'MAE for {k} folds:', -scores)"
    ]
   },
   {
@@ -380,11 +416,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# DECISION TREE\n",
+    "\n",
     "pipeline = make_pipeline(\n",
-    "    ce.OneHotEncoder(), \n",
-    "    SimpleImputer(strategy='median'), \n",
-    "    DecisionTreeRegressor(criterion='mae', max_depth=10, max_features=12)\n",
+    "    ce.OrdinalEncoder(), \n",
+    "    SimpleImputer(strategy = 'median'), \n",
+    "    DecisionTreeRegressor()\n",
     ")\n",
+    "\n",
+    "# criterion='mae', max_depth=10, max_features=12\n",
+    "\n",
+    "depth = range(1, 30, 3)\n",
+    "train_scores, val_scores = validation_curve(\n",
+    "    pipeline, X_train, y_train,\n",
+    "    param_name = 'decisiontreeregressor__max_depth',\n",
+    "    param_range = depth, scoring = 'neg_mean_absolute_error',\n",
+    "    cv=3,\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "\n",
+    "plt.figure(dpi=150)\n",
+    "plt.plot(depth, np.mean(-train_scores, axis=1), color = 'blue', label = 'training error')\n",
+    "plt.plot(depth, np.mean(-val_scores, axis=1), color = 'red', label = 'validation error')\n",
+    "plt.title('Validation Curve')\n",
+    "plt.xlabel('model complexity: DecisionTreeRegressor max_depth')\n",
+    "plt.ylabel('model score: Mean Absolute Error')\n",
+    "plt.legend();\n",
     "\n",
     "# Validation Accuracy "
    ]
